// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files 1`] = `
[
  "customer-address.form-group-fac.ts",
  "customer-address.form.ts",
  "customer-address.model.ts",
  "customer-address.properties.ts",
  "customer-address.test-obj-fac.ts",
  "customer.form-group-fac.ts",
  "customer.form.ts",
  "customer.model.ts",
  "customer.properties.ts",
  "customer.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "order-address.form-group-fac.ts",
  "order-address.form.ts",
  "order-address.model.ts",
  "order-address.properties.ts",
  "order-address.test-obj-fac.ts",
  "order-line-item.form-group-fac.ts",
  "order-line-item.form.ts",
  "order-line-item.model.ts",
  "order-line-item.properties.ts",
  "order-line-item.test-obj-fac.ts",
  "order-status-types.enum.ts",
  "order.form-group-fac.ts",
  "order.form.ts",
  "order.model.ts",
  "order.properties.ts",
  "order.test-obj-fac.ts",
  "product-category.form-group-fac.ts",
  "product-category.form.ts",
  "product-category.model.ts",
  "product-category.properties.ts",
  "product-category.test-obj-fac.ts",
  "product-model.form-group-fac.ts",
  "product-model.form.ts",
  "product-model.model.ts",
  "product-model.properties.ts",
  "product-model.test-obj-fac.ts",
  "product.form-group-fac.ts",
  "product.form.ts",
  "product.model.ts",
  "product.properties.ts",
  "product.test-obj-fac.ts",
  "sales-agent.form-group-fac.ts",
  "sales-agent.form.ts",
  "sales-agent.model.ts",
  "sales-agent.properties.ts",
  "sales-agent.test-obj-fac.ts",
  "shipping-types.enum.ts",
]
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISalesAgentForm } from './sales-agent.form';
import { ICustomerAddressForm } from './customer-address.form';
import { IOrderForm } from './order.form';

export interface ICustomerForm {
    id: FormControl<string | null | undefined>;
    num: FormControl<string>;
    name: FormControl<string | null | undefined>;
    companyName: FormControl<string>;
    salesAgentId: FormControl<number>;
    emailAddress: FormControl<string | null | undefined>;
    phone: FormControl<string | null | undefined>;
    salesAgent: FormGroup<ISalesAgentForm>;
    customerAddresses: FormArray<FormGroup<ICustomerAddressForm>>;
    orders: FormArray<FormGroup<IOrderForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ICustomerForm } from './customer.form';
import { ISalesAgentForm } from './sales-agent.form';
import { SalesAgentFormGroupFac } from './sales-agent.form-group-fac';
import { ICustomerAddressForm } from './customer-address.form';
import { IOrderForm } from './order.form';

export function CustomerFormGroupFac(): FormGroup<ICustomerForm> {
  return new FormGroup<ICustomerForm>({
    id: new FormControl<string | null | undefined>(undefined),
    num: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(10), Validators.maxLength(15)]), nonNullable: true }),
    name: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(512) } ),
    companyName: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(128)]), nonNullable: true }),
    salesAgentId: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    emailAddress: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(250) } ),
    phone: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(25) } ),
    salesAgent: new FormGroup<ISalesAgentForm>(SalesAgentFormGroupFac().controls),
    customerAddresses: new FormArray<FormGroup<ICustomerAddressForm>>([]),
    orders: new FormArray<FormGroup<IOrderForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISalesAgent } from './sales-agent.model';
import { ICustomerAddress } from './customer-address.model';
import { IOrder } from './order.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ICustomer {
  id?: string | null;
  num?: string;
  name?: string | null;
  companyName?: string;
  salesAgentId?: number;
  emailAddress?: string | null;
  phone?: string | null;
  salesAgent?: Partial<ISalesAgent>;
  customerAddresses?: Partial<ICustomerAddress[]>;
  orders?: Partial<IOrder[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum CustomerProperties {
  ID = 'id',
  NUM = 'num',
  NAME = 'name',
  COMPANY_NAME = 'companyName',
  SALES_AGENT_ID = 'salesAgentId',
  EMAIL_ADDRESS = 'emailAddress',
  PHONE = 'phone',
  SALES_AGENT = 'salesAgent',
  CUSTOMER_ADDRESSES = 'customerAddresses',
  ORDERS = 'orders',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { CustomerProperties } from './customer.properties';

export function createTestCustomer() {
    return { 
      [CustomerProperties.ID]: 'ID',
      [CustomerProperties.NUM]: 'NUM_NUM_NUM_NUM',
      [CustomerProperties.NAME]: 'NAME',
      [CustomerProperties.COMPANY_NAME]: 'COMPANY_NAME',
      [CustomerProperties.SALES_AGENT_ID]: 0,
      [CustomerProperties.EMAIL_ADDRESS]: 'EMAIL_ADDRESS',
      [CustomerProperties.PHONE]: 'PHONE', 
      [CustomerProperties.SALES_AGENT]: undefined,
      [CustomerProperties.CUSTOMER_ADDRESSES]: [],
      [CustomerProperties.ORDERS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer-address.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ICustomerForm } from './customer.form';

export interface ICustomerAddressForm {
    id: FormControl<string | null | undefined>;
    customerId: FormControl<string>;
    addressType: FormControl<string>;
    line1: FormControl<string>;
    line2: FormControl<string | null | undefined>;
    city: FormControl<string>;
    stateProvince: FormControl<string>;
    countryRegion: FormControl<string>;
    postalCode: FormControl<string>;
    customer: FormGroup<ICustomerForm>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer-address.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ICustomerAddressForm } from './customer-address.form';
import { ICustomerForm } from './customer.form';
import { CustomerFormGroupFac } from './customer.form-group-fac';

export function CustomerAddressFormGroupFac(): FormGroup<ICustomerAddressForm> {
  return new FormGroup<ICustomerAddressForm>({
    id: new FormControl<string | null | undefined>(undefined),
    customerId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    addressType: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    line1: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(60)]), nonNullable: true }),
    line2: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(60) } ),
    city: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(30)]), nonNullable: true }),
    stateProvince: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    countryRegion: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    postalCode: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(15)]), nonNullable: true }),
    customer: new FormGroup<ICustomerForm>(CustomerFormGroupFac().controls),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer-address.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ICustomer } from './customer.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ICustomerAddress {
  id?: string | null;
  customerId?: string;
  addressType?: string;
  line1?: string;
  line2?: string | null;
  city?: string;
  stateProvince?: string;
  countryRegion?: string;
  postalCode?: string;
  customer?: Partial<ICustomer>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer-address.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum CustomerAddressProperties {
  ID = 'id',
  CUSTOMER_ID = 'customerId',
  ADDRESS_TYPE = 'addressType',
  LINE_1 = 'line1',
  LINE_2 = 'line2',
  CITY = 'city',
  STATE_PROVINCE = 'stateProvince',
  COUNTRY_REGION = 'countryRegion',
  POSTAL_CODE = 'postalCode',
  CUSTOMER = 'customer',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: customer-address.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { CustomerAddressProperties } from './customer-address.properties';

export function createTestCustomerAddress() {
    return { 
      [CustomerAddressProperties.ID]: 'ID',
      [CustomerAddressProperties.CUSTOMER_ID]: 'CUSTOMER_ID',
      [CustomerAddressProperties.ADDRESS_TYPE]: 'ADDRESS_TYPE',
      [CustomerAddressProperties.LINE_1]: 'LINE_1',
      [CustomerAddressProperties.LINE_2]: 'LINE_2',
      [CustomerAddressProperties.CITY]: 'CITY',
      [CustomerAddressProperties.STATE_PROVINCE]: 'STATE_PROVINCE',
      [CustomerAddressProperties.COUNTRY_REGION]: 'COUNTRY_REGION',
      [CustomerAddressProperties.POSTAL_CODE]: 'POSTAL_CODE', 
      [CustomerAddressProperties.CUSTOMER]: undefined,
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum Endpoints {
  customerAddresses = '/odata/v1/CustomerAddresses',
  customers = '/odata/v1/Customers',
  orderLineItems = '/odata/v1/OrderLineItems',
  orders = '/odata/v1/Orders',
  productCategories = '/odata/v1/ProductCategories',
  productModels = '/odata/v1/ProductModels',
  products = '/odata/v1/Products',
  salesAgents = '/odata/v1/SalesAgents',
}
export interface IEndpoints {
  readonly customerAddresses: string;
  readonly customers: string;
  readonly orderLineItems: string;
  readonly orders: string;
  readonly productCategories: string;
  readonly productModels: string;
  readonly products: string;
  readonly salesAgents: string;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export * from './customer-address.form-group-fac';
export * from './customer-address.form';
export * from './customer-address.model';
export * from './customer-address.properties';
export * from './customer-address.test-obj-fac';
export * from './customer.form-group-fac';
export * from './customer.form';
export * from './customer.model';
export * from './customer.properties';
export * from './customer.test-obj-fac';
export * from './order-address.form-group-fac';
export * from './order-address.form';
export * from './order-address.model';
export * from './order-address.properties';
export * from './order-address.test-obj-fac';
export * from './order-line-item.form-group-fac';
export * from './order-line-item.form';
export * from './order-line-item.model';
export * from './order-line-item.properties';
export * from './order-line-item.test-obj-fac';
export * from './order-status-types.enum';
export * from './order.form-group-fac';
export * from './order.form';
export * from './order.model';
export * from './order.properties';
export * from './order.test-obj-fac';
export * from './product-category.form-group-fac';
export * from './product-category.form';
export * from './product-category.model';
export * from './product-category.properties';
export * from './product-category.test-obj-fac';
export * from './product-model.form-group-fac';
export * from './product-model.form';
export * from './product-model.model';
export * from './product-model.properties';
export * from './product-model.test-obj-fac';
export * from './product.form-group-fac';
export * from './product.form';
export * from './product.model';
export * from './product.properties';
export * from './product.test-obj-fac';
export * from './sales-agent.form-group-fac';
export * from './sales-agent.form';
export * from './sales-agent.model';
export * from './sales-agent.properties';
export * from './sales-agent.test-obj-fac';
export * from './shipping-types.enum';
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { OrderStatusTypes } from './order-status-types.enum';
import { ShippingTypes } from './shipping-types.enum';
import { ICustomerForm } from './customer.form';
import { IOrderAddressForm } from './order-address.form';
import { IOrderLineItemForm } from './order-line-item.form';

export interface IOrderForm {
    id: FormControl<string | null | undefined>;
    orderId: FormControl<number>;
    revisionNum: FormControl<number>;
    date: FormControl<Date>;
    dueDate: FormControl<Date>;
    shipDate: FormControl<Date | null | undefined>;
    isOnlineOrder: FormControl<boolean>;
    num: FormControl<string>;
    purchaseOrderNum: FormControl<string | null | undefined>;
    customerId: FormControl<string>;
    shipToAddressId: FormControl<string | null | undefined>;
    billToAddressId: FormControl<string | null | undefined>;
    creditCardApprovalCode: FormControl<string | null | undefined>;
    subTotal: FormControl<number>;
    taxAmt: FormControl<number>;
    freight: FormControl<number>;
    totalDue: FormControl<number>;
    comment: FormControl<string | null | undefined>;
    statusType: FormControl<OrderStatusTypes | string>;
    shippingType: FormControl<ShippingTypes | string>;
    customer: FormGroup<ICustomerForm>;
    shipToAddress: FormGroup<IOrderAddressForm>;
    billToAddress: FormGroup<IOrderAddressForm>;
    orderLineItems: FormArray<FormGroup<IOrderLineItemForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IOrderForm } from './order.form';
import { OrderStatusTypes } from './order-status-types.enum';
import { ShippingTypes } from './shipping-types.enum';
import { ICustomerForm } from './customer.form';
import { CustomerFormGroupFac } from './customer.form-group-fac';
import { IOrderAddressForm } from './order-address.form';
import { OrderAddressFormGroupFac } from './order-address.form-group-fac';
import { IOrderLineItemForm } from './order-line-item.form';

export function OrderFormGroupFac(): FormGroup<IOrderForm> {
  return new FormGroup<IOrderForm>({
    id: new FormControl<string | null | undefined>(undefined),
    orderId: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    revisionNum: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    date: new FormControl<Date>(undefined, { validators: Validators.required, nonNullable: true } ),
    dueDate: new FormControl<Date>(undefined, { validators: Validators.required, nonNullable: true } ),
    shipDate: new FormControl<Date | null | undefined>(undefined),
    isOnlineOrder: new FormControl<boolean>(undefined, { validators: Validators.required, nonNullable: true } ),
    num: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(25)]), nonNullable: true }),
    purchaseOrderNum: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(25) } ),
    customerId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    shipToAddressId: new FormControl<string | null | undefined>(undefined),
    billToAddressId: new FormControl<string | null | undefined>(undefined),
    creditCardApprovalCode: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(15) } ),
    subTotal: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    taxAmt: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    freight: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    totalDue: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    comment: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(500) } ),
    statusType: new FormControl<OrderStatusTypes | string>(undefined, { validators: Validators.required, nonNullable: true } ),
    shippingType: new FormControl<ShippingTypes | string>(undefined, { validators: Validators.required, nonNullable: true } ),
    customer: new FormGroup<ICustomerForm>(CustomerFormGroupFac().controls),
    shipToAddress: new FormGroup<IOrderAddressForm>(OrderAddressFormGroupFac().controls),
    billToAddress: new FormGroup<IOrderAddressForm>(OrderAddressFormGroupFac().controls),
    orderLineItems: new FormArray<FormGroup<IOrderLineItemForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { OrderStatusTypes } from './order-status-types.enum';
import { ShippingTypes } from './shipping-types.enum';
import { ICustomer } from './customer.model';
import { IOrderAddress } from './order-address.model';
import { IOrderLineItem } from './order-line-item.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IOrder {
  id?: string | null;
  orderId?: number;
  revisionNum?: number;
  date?: Date;
  dueDate?: Date;
  shipDate?: Date | null;
  isOnlineOrder?: boolean;
  num?: string;
  purchaseOrderNum?: string | null;
  customerId?: string;
  shipToAddressId?: string | null;
  billToAddressId?: string | null;
  creditCardApprovalCode?: string | null;
  subTotal?: number;
  taxAmt?: number;
  freight?: number;
  totalDue?: number;
  comment?: string | null;
  statusType?: OrderStatusTypes | string;
  shippingType?: ShippingTypes | string;
  customer?: Partial<ICustomer>;
  shipToAddress?: Partial<IOrderAddress>;
  billToAddress?: Partial<IOrderAddress>;
  orderLineItems?: Partial<IOrderLineItem[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum OrderProperties {
  ID = 'id',
  ORDER_ID = 'orderId',
  REVISION_NUM = 'revisionNum',
  DATE = 'date',
  DUE_DATE = 'dueDate',
  SHIP_DATE = 'shipDate',
  IS_ONLINE_ORDER = 'isOnlineOrder',
  NUM = 'num',
  PURCHASE_ORDER_NUM = 'purchaseOrderNum',
  CUSTOMER_ID = 'customerId',
  SHIP_TO_ADDRESS_ID = 'shipToAddressId',
  BILL_TO_ADDRESS_ID = 'billToAddressId',
  CREDIT_CARD_APPROVAL_CODE = 'creditCardApprovalCode',
  SUB_TOTAL = 'subTotal',
  TAX_AMT = 'taxAmt',
  FREIGHT = 'freight',
  TOTAL_DUE = 'totalDue',
  COMMENT = 'comment',
  STATUS_TYPE = 'statusType',
  SHIPPING_TYPE = 'shippingType',
  CUSTOMER = 'customer',
  SHIP_TO_ADDRESS = 'shipToAddress',
  BILL_TO_ADDRESS = 'billToAddress',
  ORDER_LINE_ITEMS = 'orderLineItems',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { OrderStatusTypes } from './order-status-types.enum';
import { ShippingTypes } from './shipping-types.enum';
import { OrderProperties } from './order.properties';

export function createTestOrder() {
    return { 
      [OrderProperties.ID]: 'ID',
      [OrderProperties.ORDER_ID]: 0,
      [OrderProperties.REVISION_NUM]: 0,
      [OrderProperties.DATE]: new Date(),
      [OrderProperties.DUE_DATE]: new Date(),
      [OrderProperties.SHIP_DATE]: new Date(),
      [OrderProperties.IS_ONLINE_ORDER]: false,
      [OrderProperties.NUM]: 'NUM',
      [OrderProperties.PURCHASE_ORDER_NUM]: 'PURCHASE_ORDER_NUM',
      [OrderProperties.CUSTOMER_ID]: 'CUSTOMER_ID',
      [OrderProperties.SHIP_TO_ADDRESS_ID]: 'SHIP_TO_ADDRESS_ID',
      [OrderProperties.BILL_TO_ADDRESS_ID]: 'BILL_TO_ADDRESS_ID',
      [OrderProperties.CREDIT_CARD_APPROVAL_CODE]: 'CREDIT_CARD_APP',
      [OrderProperties.SUB_TOTAL]: 0,
      [OrderProperties.TAX_AMT]: 0,
      [OrderProperties.FREIGHT]: 0,
      [OrderProperties.TOTAL_DUE]: 0,
      [OrderProperties.COMMENT]: 'COMMENT', 
      [OrderProperties.STATUS_TYPE]: OrderStatusTypes.Processing,
      [OrderProperties.SHIPPING_TYPE]: ShippingTypes.Other,
      [OrderProperties.CUSTOMER]: undefined,
      [OrderProperties.SHIP_TO_ADDRESS]: undefined,
      [OrderProperties.BILL_TO_ADDRESS]: undefined,
      [OrderProperties.ORDER_LINE_ITEMS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-address.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IOrderForm } from './order.form';

export interface IOrderAddressForm {
    id: FormControl<string | null | undefined>;
    line1: FormControl<string>;
    line2: FormControl<string | null | undefined>;
    city: FormControl<string>;
    stateProvince: FormControl<string>;
    countryRegion: FormControl<string>;
    postalCode: FormControl<string>;
    billToOrders: FormArray<FormGroup<IOrderForm>>;
    shipToOrders: FormArray<FormGroup<IOrderForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-address.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IOrderAddressForm } from './order-address.form';
import { IOrderForm } from './order.form';

export function OrderAddressFormGroupFac(): FormGroup<IOrderAddressForm> {
  return new FormGroup<IOrderAddressForm>({
    id: new FormControl<string | null | undefined>(undefined),
    line1: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(60)]), nonNullable: true }),
    line2: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(60) } ),
    city: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(100)]), nonNullable: true }),
    stateProvince: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    countryRegion: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    postalCode: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(15)]), nonNullable: true }),
    billToOrders: new FormArray<FormGroup<IOrderForm>>([]),
    shipToOrders: new FormArray<FormGroup<IOrderForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-address.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IOrder } from './order.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IOrderAddress {
  id?: string | null;
  line1?: string;
  line2?: string | null;
  city?: string;
  stateProvince?: string;
  countryRegion?: string;
  postalCode?: string;
  billToOrders?: Partial<IOrder[]>;
  shipToOrders?: Partial<IOrder[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-address.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum OrderAddressProperties {
  ID = 'id',
  LINE_1 = 'line1',
  LINE_2 = 'line2',
  CITY = 'city',
  STATE_PROVINCE = 'stateProvince',
  COUNTRY_REGION = 'countryRegion',
  POSTAL_CODE = 'postalCode',
  BILL_TO_ORDERS = 'billToOrders',
  SHIP_TO_ORDERS = 'shipToOrders',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-address.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { OrderAddressProperties } from './order-address.properties';

export function createTestOrderAddress() {
    return { 
      [OrderAddressProperties.ID]: 'ID',
      [OrderAddressProperties.LINE_1]: 'LINE_1',
      [OrderAddressProperties.LINE_2]: 'LINE_2',
      [OrderAddressProperties.CITY]: 'CITY',
      [OrderAddressProperties.STATE_PROVINCE]: 'STATE_PROVINCE',
      [OrderAddressProperties.COUNTRY_REGION]: 'COUNTRY_REGION',
      [OrderAddressProperties.POSTAL_CODE]: 'POSTAL_CODE', 
      [OrderAddressProperties.BILL_TO_ORDERS]: [],
      [OrderAddressProperties.SHIP_TO_ORDERS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-line-item.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IOrderForm } from './order.form';
import { IProductForm } from './product.form';

export interface IOrderLineItemForm {
    id: FormControl<string | null | undefined>;
    orderId: FormControl<string>;
    orderQty: FormControl<number>;
    productId: FormControl<string>;
    unitPrice: FormControl<number>;
    unitPriceDiscount: FormControl<number>;
    lineTotal: FormControl<number>;
    order: FormGroup<IOrderForm>;
    product: FormGroup<IProductForm>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-line-item.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IOrderLineItemForm } from './order-line-item.form';
import { IOrderForm } from './order.form';
import { OrderFormGroupFac } from './order.form-group-fac';
import { IProductForm } from './product.form';
import { ProductFormGroupFac } from './product.form-group-fac';

export function OrderLineItemFormGroupFac(): FormGroup<IOrderLineItemForm> {
  return new FormGroup<IOrderLineItemForm>({
    id: new FormControl<string | null | undefined>(undefined),
    orderId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    orderQty: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    productId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    unitPrice: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    unitPriceDiscount: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    lineTotal: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    order: new FormGroup<IOrderForm>(OrderFormGroupFac().controls),
    product: new FormGroup<IProductForm>(ProductFormGroupFac().controls),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-line-item.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IOrder } from './order.model';
import { IProduct } from './product.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IOrderLineItem {
  id?: string | null;
  orderId?: string;
  orderQty?: number;
  productId?: string;
  unitPrice?: number;
  unitPriceDiscount?: number;
  lineTotal?: number;
  order?: Partial<IOrder>;
  product?: Partial<IProduct>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-line-item.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum OrderLineItemProperties {
  ID = 'id',
  ORDER_ID = 'orderId',
  ORDER_QTY = 'orderQty',
  PRODUCT_ID = 'productId',
  UNIT_PRICE = 'unitPrice',
  UNIT_PRICE_DISCOUNT = 'unitPriceDiscount',
  LINE_TOTAL = 'lineTotal',
  ORDER = 'order',
  PRODUCT = 'product',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-line-item.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { OrderLineItemProperties } from './order-line-item.properties';

export function createTestOrderLineItem() {
    return { 
      [OrderLineItemProperties.ID]: 'ID',
      [OrderLineItemProperties.ORDER_ID]: 'ORDER_ID',
      [OrderLineItemProperties.ORDER_QTY]: 0,
      [OrderLineItemProperties.PRODUCT_ID]: 'PRODUCT_ID',
      [OrderLineItemProperties.UNIT_PRICE]: 0,
      [OrderLineItemProperties.UNIT_PRICE_DISCOUNT]: 0,
      [OrderLineItemProperties.LINE_TOTAL]: 0, 
      [OrderLineItemProperties.ORDER]: undefined,
      [OrderLineItemProperties.PRODUCT]: undefined,
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: order-status-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum OrderStatusTypes {
  Processing = 0,
  WaitingOnShipping = 10,
  InTransit = 20,
  Received = 50,
}

export enum OrderStatusTypeNames {
  PROCESSING = 'Processing',
  WAITING_ON_SHIPPING = 'WaitingOnShipping',
  IN_TRANSIT = 'InTransit',
  RECEIVED = 'Received',
}

export const orderStatusTypeValues : IEnumValue[] = [
  { key: 0, name: 'Processing', displayText: 'Processing'},
  { key: 10, name: 'WaitingOnShipping', displayText: 'Waiting On Shipping'},
  { key: 20, name: 'InTransit', displayText: 'In Transit'},
  { key: 50, name: 'Received', displayText: 'Received'},
];
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IProductModelForm } from './product-model.form';
import { IProductCategoryForm } from './product-category.form';
import { IOrderLineItemForm } from './order-line-item.form';

export interface IProductForm {
    id: FormControl<string | null | undefined>;
    name: FormControl<string>;
    num: FormControl<string>;
    color: FormControl<string | null | undefined>;
    standardCost: FormControl<number>;
    listPrice: FormControl<number>;
    size: FormControl<string | null | undefined>;
    weight: FormControl<number | null | undefined>;
    productCategoryId: FormControl<string | null | undefined>;
    productModelId: FormControl<string | null | undefined>;
    sellStartDate: FormControl<Date>;
    sellEndDate: FormControl<Date | null | undefined>;
    discontinuedDate: FormControl<Date | null | undefined>;
    thumbNailPhoto: FormControl<string | null | undefined>;
    productModel: FormGroup<IProductModelForm>;
    productCategory: FormGroup<IProductCategoryForm>;
    orderLineItems: FormArray<FormGroup<IOrderLineItemForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IProductForm } from './product.form';
import { IProductModelForm } from './product-model.form';
import { ProductModelFormGroupFac } from './product-model.form-group-fac';
import { IProductCategoryForm } from './product-category.form';
import { ProductCategoryFormGroupFac } from './product-category.form-group-fac';
import { IOrderLineItemForm } from './order-line-item.form';

export function ProductFormGroupFac(): FormGroup<IProductForm> {
  return new FormGroup<IProductForm>({
    id: new FormControl<string | null | undefined>(undefined),
    name: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(2), Validators.maxLength(50)]), nonNullable: true }),
    num: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(10), Validators.maxLength(25)]), nonNullable: true }),
    color: new FormControl<string | null | undefined>(undefined, { validators: Validators.compose([Validators.minLength(3), Validators.maxLength(15)]) }),
    standardCost: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    listPrice: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    size: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(5) } ),
    weight: new FormControl<number | null | undefined>(undefined),
    productCategoryId: new FormControl<string | null | undefined>(undefined),
    productModelId: new FormControl<string | null | undefined>(undefined),
    sellStartDate: new FormControl<Date>(undefined, { validators: Validators.required, nonNullable: true } ),
    sellEndDate: new FormControl<Date | null | undefined>(undefined),
    discontinuedDate: new FormControl<Date | null | undefined>(undefined),
    thumbNailPhoto: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(5000) } ),
    productModel: new FormGroup<IProductModelForm>(ProductModelFormGroupFac().controls),
    productCategory: new FormGroup<IProductCategoryForm>(ProductCategoryFormGroupFac().controls),
    orderLineItems: new FormArray<FormGroup<IOrderLineItemForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IProductModel } from './product-model.model';
import { IProductCategory } from './product-category.model';
import { IOrderLineItem } from './order-line-item.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IProduct {
  id?: string | null;
  name?: string;
  num?: string;
  color?: string | null;
  standardCost?: number;
  listPrice?: number;
  size?: string | null;
  weight?: number | null;
  productCategoryId?: string | null;
  productModelId?: string | null;
  sellStartDate?: Date;
  sellEndDate?: Date | null;
  discontinuedDate?: Date | null;
  thumbNailPhoto?: string | null;
  productModel?: Partial<IProductModel>;
  productCategory?: Partial<IProductCategory>;
  orderLineItems?: Partial<IOrderLineItem[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum ProductProperties {
  ID = 'id',
  NAME = 'name',
  NUM = 'num',
  COLOR = 'color',
  STANDARD_COST = 'standardCost',
  LIST_PRICE = 'listPrice',
  SIZE = 'size',
  WEIGHT = 'weight',
  PRODUCT_CATEGORY_ID = 'productCategoryId',
  PRODUCT_MODEL_ID = 'productModelId',
  SELL_START_DATE = 'sellStartDate',
  SELL_END_DATE = 'sellEndDate',
  DISCONTINUED_DATE = 'discontinuedDate',
  THUMB_NAIL_PHOTO = 'thumbNailPhoto',
  PRODUCT_MODEL = 'productModel',
  PRODUCT_CATEGORY = 'productCategory',
  ORDER_LINE_ITEMS = 'orderLineItems',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ProductProperties } from './product.properties';

export function createTestProduct() {
    return { 
      [ProductProperties.ID]: 'ID',
      [ProductProperties.NAME]: 'NAME',
      [ProductProperties.NUM]: 'NUM_NUM_NUM_NUM',
      [ProductProperties.COLOR]: 'COLOR',
      [ProductProperties.STANDARD_COST]: 0,
      [ProductProperties.LIST_PRICE]: 0,
      [ProductProperties.SIZE]: 'SIZE',
      [ProductProperties.WEIGHT]: 0,
      [ProductProperties.PRODUCT_CATEGORY_ID]: 'PRODUCT_CATEGORY_ID',
      [ProductProperties.PRODUCT_MODEL_ID]: 'PRODUCT_MODEL_ID',
      [ProductProperties.SELL_START_DATE]: new Date(),
      [ProductProperties.SELL_END_DATE]: new Date(),
      [ProductProperties.DISCONTINUED_DATE]: new Date(),
      [ProductProperties.THUMB_NAIL_PHOTO]: 'THUMB_NAIL_PHOTO', 
      [ProductProperties.PRODUCT_MODEL]: undefined,
      [ProductProperties.PRODUCT_CATEGORY]: undefined,
      [ProductProperties.ORDER_LINE_ITEMS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-category.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IProductForm } from './product.form';

export interface IProductCategoryForm {
    id: FormControl<string | null | undefined>;
    name: FormControl<string>;
    products: FormArray<FormGroup<IProductForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-category.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IProductCategoryForm } from './product-category.form';
import { IProductForm } from './product.form';

export function ProductCategoryFormGroupFac(): FormGroup<IProductCategoryForm> {
  return new FormGroup<IProductCategoryForm>({
    id: new FormControl<string | null | undefined>(undefined),
    name: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    products: new FormArray<FormGroup<IProductForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-category.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IProduct } from './product.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IProductCategory {
  id?: string | null;
  name?: string;
  products?: Partial<IProduct[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-category.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum ProductCategoryProperties {
  ID = 'id',
  NAME = 'name',
  PRODUCTS = 'products',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-category.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ProductCategoryProperties } from './product-category.properties';

export function createTestProductCategory() {
    return { 
      [ProductCategoryProperties.ID]: 'ID',
      [ProductCategoryProperties.NAME]: 'NAME', 
      [ProductCategoryProperties.PRODUCTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-model.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IProductForm } from './product.form';

export interface IProductModelForm {
    id: FormControl<string | null | undefined>;
    name: FormControl<string>;
    description: FormControl<string | null | undefined>;
    products: FormArray<FormGroup<IProductForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-model.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IProductModelForm } from './product-model.form';
import { IProductForm } from './product.form';

export function ProductModelFormGroupFac(): FormGroup<IProductModelForm> {
  return new FormGroup<IProductModelForm>({
    id: new FormControl<string | null | undefined>(undefined),
    name: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    description: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(500) } ),
    products: new FormArray<FormGroup<IProductForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-model.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IProduct } from './product.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IProductModel {
  id?: string | null;
  name?: string;
  description?: string | null;
  products?: Partial<IProduct[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-model.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum ProductModelProperties {
  ID = 'id',
  NAME = 'name',
  DESCRIPTION = 'description',
  PRODUCTS = 'products',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: product-model.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ProductModelProperties } from './product-model.properties';

export function createTestProductModel() {
    return { 
      [ProductModelProperties.ID]: 'ID',
      [ProductModelProperties.NAME]: 'NAME',
      [ProductModelProperties.DESCRIPTION]: 'DESCRIPTION', 
      [ProductModelProperties.PRODUCTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: sales-agent.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ICustomerForm } from './customer.form';

export interface ISalesAgentForm {
    id: FormControl<number | null | undefined>;
    name: FormControl<string>;
    loginId: FormControl<string>;
    customers: FormArray<FormGroup<ICustomerForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: sales-agent.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ISalesAgentForm } from './sales-agent.form';
import { ICustomerForm } from './customer.form';

export function SalesAgentFormGroupFac(): FormGroup<ISalesAgentForm> {
  return new FormGroup<ISalesAgentForm>({
    id: new FormControl<number | null | undefined>(undefined),
    name: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(256)]), nonNullable: true }),
    loginId: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(256)]), nonNullable: true }),
    customers: new FormArray<FormGroup<ICustomerForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: sales-agent.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ICustomer } from './customer.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISalesAgent {
  id?: number | null;
  name?: string;
  loginId?: string;
  customers?: Partial<ICustomer[]>;
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: sales-agent.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum SalesAgentProperties {
  ID = 'id',
  NAME = 'name',
  LOGIN_ID = 'loginId',
  CUSTOMERS = 'customers',
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: sales-agent.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { SalesAgentProperties } from './sales-agent.properties';

export function createTestSalesAgent() {
    return { 
      [SalesAgentProperties.ID]: 0,
      [SalesAgentProperties.NAME]: 'NAME',
      [SalesAgentProperties.LOGIN_ID]: 'LOGIN_ID', 
      [SalesAgentProperties.CUSTOMERS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests Adventure Works Account Service should generate files: shipping-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum ShippingTypes {
  Other = 1,
  Air = 2,
  Truck = 3,
  Train = 4,
  CargoTransport = 5,
}

export enum ShippingTypeNames {
  OTHER = 'Other',
  AIR = 'Air',
  TRUCK = 'Truck',
  TRAIN = 'Train',
  CARGO_TRANSPORT = 'CargoTransport',
}

export const shippingTypeValues : IEnumValue[] = [
  { key: 1, name: 'Other', displayText: 'Other'},
  { key: 2, name: 'Air', displayText: 'Air'},
  { key: 3, name: 'Truck', displayText: 'Truck'},
  { key: 4, name: 'Train', displayText: 'Train'},
  { key: 5, name: 'CargoTransport', displayText: 'Cargo Transport'},
];
"
`;
